@@ -2,7 +2,7 @@ lib_LTLIBRARIES += zbar/libzbar.la
 zbar_libzbar_la_CPPFLAGS = -I$(srcdir)/zbar $(AM_CPPFLAGS)
 zbar_libzbar_la_LDFLAGS = -no-undefined -version-info $(LIB_VERSION) \
     -export-symbols-regex "^(zbar|_zbar.*_error)_.*" $(AM_LDFLAGS)
-zbar_libzbar_la_LIBADD =
+zbar_libzbar_la_LIBADD = $(LTLIBICONV)
 
 zbar_libzbar_la_SOURCES = zbar/debug.h zbar/config.c \
     zbar/error.h zbar/error.c zbar/symbol.h zbar/symbol.c \
@@ -29,7 +29,14 @@ zbar_libzbar_la_SOURCES += zbar/decoder/pdf417.h zbar/decoder/pdf417.c \
     zbar/decoder/pdf417_hash.h
 endif
 if ENABLE_QR
-zbar_libzbar_la_SOURCES += zbar/decoder/qr_finder.h zbar/decoder/qr_finder.c
+zbar_libzbar_la_SOURCES += zbar/decoder/qrcode.h \
+    zbar/decoder/qr_finder.h zbar/decoder/qr_finder.c \
+    zbar/decoder/qr/qrdec.c zbar/decoder/qr/qrdectxt.c \
+    zbar/decoder/qr/rs.h zbar/decoder/qr/rs.c \
+    zbar/decoder/qr/isaac.h zbar/decoder/qr/isaac.c \
+    zbar/decoder/qr/bch15_5.h zbar/decoder/qr/bch15_5.c \
+    zbar/decoder/qr/binarize.h zbar/decoder/qr/binarize.c \
+    zbar/decoder/qr/util.h zbar/decoder/qr/util.c
 endif
 
 if HAVE_POLL
